@@ -556,7 +556,7 @@ class testFormItemHttpAgent extends CLegacyWebTest {
 					'request_type' => 'JSON data',
 					'error' => 'Cannot add item',
 					'error_details' => [
-						'Cannot read JSON.'
+						'Invalid parameter "posts": JSON is expected.'
 					]
 				]
 			],
@@ -571,7 +571,7 @@ class testFormItemHttpAgent extends CLegacyWebTest {
 					'request_type' => 'JSON data',
 					'error' => 'Cannot add item',
 					'error_details' => [
-						'Cannot read JSON.'
+						'Invalid parameter "posts": JSON is expected.'
 					]
 				]
 			],
@@ -585,7 +585,7 @@ class testFormItemHttpAgent extends CLegacyWebTest {
 					'request_type' => 'XML data',
 					'error' => 'Cannot add item',
 					'error_details' => [
-						'Cannot read XML: XML is empty.'
+						'Invalid parameter "posts": XML is expected.'
 					]
 				]
 			],
@@ -600,7 +600,7 @@ class testFormItemHttpAgent extends CLegacyWebTest {
 					'request_type' => 'XML data',
 					'error' => 'Cannot add item',
 					'error_details' => [
-						'Cannot read XML: (4) Start tag expected, \'<\' not found'
+						'Invalid parameter "posts": (4) Start tag expected, \'<\' not found'
 					]
 				]
 			],
@@ -615,7 +615,7 @@ class testFormItemHttpAgent extends CLegacyWebTest {
 					'request_type' => 'XML data',
 					'error' => 'Cannot add item',
 					'error_details' => [
-						'Cannot read XML: (73) expected \'>\''
+						'Invalid parameter "posts": (73) expected \'>\''
 					]
 				]
 			],
@@ -748,7 +748,7 @@ class testFormItemHttpAgent extends CLegacyWebTest {
 				[
 					'request_type' => 'JSON data',
 					'error_details' => [
-						'Cannot read JSON.'
+						'Invalid parameter "posts": JSON is expected.'
 					]
 				]
 			],
@@ -756,7 +756,7 @@ class testFormItemHttpAgent extends CLegacyWebTest {
 				[
 					'request_type' => 'XML data',
 					'error_details' => [
-						'Cannot read XML: XML is empty.'
+						'Invalid parameter "posts": XML is expected.'
 					]
 				]
 			],
@@ -767,7 +767,7 @@ class testFormItemHttpAgent extends CLegacyWebTest {
 					],
 					'request_type' => 'XML data',
 					'error_details' => [
-						'Cannot read XML: (4) Start tag expected, \'<\' not found'
+						'Invalid parameter "posts": (4) Start tag expected, \'<\' not found'
 					]
 				]
 			],
